# qml6glsink_gstreamer

./: .gitignore  .gitmodules  README.md  build_gstreamer.sh
example/src/: CMakeLists.txt  main.cpp  resources.qrc
